// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TopLanguagesHistorical when data is loaded renders a component with data loaded 1`] = `
<DocumentFragment>
  <div
    class="chart__title"
  >
    <a
      href="/definitions#dimension_language"
    >
      <span
        class="usa-tooltip"
      >
        <span
          aria-describedby="tooltip-550000"
          class="usa-tooltip__trigger"
          data-position="top"
          tabindex="0"
        >
          Languages
        </span>
        <span
          aria-hidden="true"
          class="usa-tooltip__body"
          id="tooltip-550000"
          role="tooltip"
        >
          The name of the language of a user's browser or device.
        </span>
      </span>
    </a>
  </div>
  <figure
    id="chart_top-languages"
  >
    <div
      class="data chart__bar-chart text--capitalize margin-top-2"
    >
      <div
        class="chart__bar-chart__item"
      >
        <div
          class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
        >
          English
        </div>
        <div
          class="chart__bar-chart__item__value"
        >
          91.2%
        </div>
        <div
          class="chart__bar-chart__item__bar bg-palette-color-5"
          style="width: 91%;"
        />
      </div>
      <div
        class="chart__bar-chart__item"
      >
        <div
          class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
        >
          Spanish
        </div>
        <div
          class="chart__bar-chart__item__value"
        >
          5.3%
        </div>
        <div
          class="chart__bar-chart__item__bar bg-palette-color-5"
          style="width: 5%;"
        />
      </div>
      <div
        class="chart__bar-chart__item"
      >
        <div
          class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
        >
          Chinese
        </div>
        <div
          class="chart__bar-chart__item__value"
        >
          0.9%
        </div>
        <div
          class="chart__bar-chart__item__bar bg-palette-color-5"
          style="width: 1%;"
        />
      </div>
      <div
        class="chart__bar-chart__item"
      >
        <div
          class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
        >
          French
        </div>
        <div
          class="chart__bar-chart__item__value"
        >
          0.5%
        </div>
        <div
          class="chart__bar-chart__item__bar bg-palette-color-5"
          style="width: 0%;"
        />
      </div>
      <div
        class="chart__bar-chart__item"
      >
        <div
          class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
        >
          Japanese
        </div>
        <div
          class="chart__bar-chart__item__value"
        >
          0.2%
        </div>
        <div
          class="chart__bar-chart__item__bar bg-palette-color-5"
          style="width: 0%;"
        />
      </div>
      <div
        class="chart__bar-chart__item"
      >
        <div
          class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
        >
          Portuguese
        </div>
        <div
          class="chart__bar-chart__item__value"
        >
          0.3%
        </div>
        <div
          class="chart__bar-chart__item__bar bg-palette-color-5"
          style="width: 0%;"
        />
      </div>
      <div
        class="chart__bar-chart__item"
      >
        <div
          class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
        >
          German
        </div>
        <div
          class="chart__bar-chart__item__value"
        >
          0.3%
        </div>
        <div
          class="chart__bar-chart__item__bar bg-palette-color-5"
          style="width: 0%;"
        />
      </div>
      <div
        class="chart__bar-chart__item"
      >
        <div
          class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
        >
          Italian
        </div>
        <div
          class="chart__bar-chart__item__value"
        >
          0.2%
        </div>
        <div
          class="chart__bar-chart__item__bar bg-palette-color-5"
          style="width: 0%;"
        />
      </div>
      <div
        class="chart__bar-chart__item"
      >
        <div
          class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
        >
          Korean
        </div>
        <div
          class="chart__bar-chart__item__value"
        >
          0.2%
        </div>
        <div
          class="chart__bar-chart__item__bar bg-palette-color-5"
          style="width: 0%;"
        />
      </div>
      <div
        class="chart__bar-chart__item"
      >
        <div
          class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
        >
          Russian
        </div>
        <div
          class="chart__bar-chart__item__value"
        >
          0.2%
        </div>
        <div
          class="chart__bar-chart__item__bar bg-palette-color-5"
          style="width: 0%;"
        />
      </div>
    </div>
  </figure>
</DocumentFragment>
`;

exports[`TopLanguagesHistorical when data is not loaded renders a component in loading state 1`] = `
<DocumentFragment>
  <div
    class="chart__title"
  >
    <a
      href="/definitions#dimension_language"
    >
      <span
        class="usa-tooltip"
      >
        <span
          aria-describedby="tooltip-550000"
          class="usa-tooltip__trigger"
          data-position="top"
          tabindex="0"
        >
          Languages
        </span>
        <span
          aria-hidden="true"
          class="usa-tooltip__body"
          id="tooltip-550000"
          role="tooltip"
        >
          The name of the language of a user's browser or device.
        </span>
      </span>
    </a>
  </div>
  <figure
    id="chart_top-languages"
  >
    <div
      class="data chart__bar-chart text--capitalize margin-top-2"
    />
  </figure>
</DocumentFragment>
`;

exports[`TopLanguagesHistorical when data loading has an error renders a component in error state 1`] = `
<DocumentFragment>
  <div
    class="chart__title"
  >
    <a
      href="/definitions#dimension_language"
    >
      <span
        class="usa-tooltip"
      >
        <span
          aria-describedby="tooltip-550000"
          class="usa-tooltip__trigger"
          data-position="top"
          tabindex="0"
        >
          Languages
        </span>
        <span
          aria-hidden="true"
          class="usa-tooltip__body"
          id="tooltip-550000"
          role="tooltip"
        >
          The name of the language of a user's browser or device.
        </span>
      </span>
    </a>
  </div>
  <figure
    id="chart_top-languages"
  >
    <div
      class="data chart__bar-chart text--capitalize margin-top-2"
    />
  </figure>
</DocumentFragment>
`;
